@@ -3,6 +3,8 @@ package cloud.waldiekiste.java.projekte.cloudnet.webinterface.services;
 import cloud.waldiekiste.java.projekte.cloudnet.webinterface.http.v2.utils.JsonUtil;
 import cloud.waldiekiste.java.projekte.cloudnet.webinterface.utils.UpdateData;
 import cloud.waldiekiste.java.projekte.cloudnet.webinterface.utils.VersionType;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import de.dytanic.cloudnet.lib.utility.document.Document;
@@ -26,14 +28,12 @@ public class UpdateService {
             if (document.contains("mdwi.updateChannel")) {
                 VersionType type = VersionType.valueOf(document.get("mdwi.updateChannel").getAsString());
                 ModuleConfig config = module.getModuleConfig();
-                String versionID = config.getVersion();
-                Long oldVersion = new Long(versionID.replace(".",""));
+                Long oldVersion = Long.valueOf(config.getVersion());
                 UpdateData data = getUpdateData(type);
                 if(data == null){
                     return;
                 }
-                String v = data.getVersion().replace(".","");
-                Long newVersion = new Long(v);
+                Long newVersion = data.getVersion();
                 if(newVersion > oldVersion){
                     module.onShutdown();
                     CloudNet.getInstance().getModuleManager().disableModule(module);
@@ -45,12 +45,13 @@ public class UpdateService {
                     System.out.println("[Updater] No Update available!");
                 }
             }else{
-                System.err.println("CloudNet-Web");            }
+                System.err.println("CloudNet-Web");
+            }
         } catch (Exception e) {e.printStackTrace();}
     }
     public void update(UpdateData data) {
         try {
-            HttpURLConnection httpURLConnection = (HttpURLConnection)(new URL(data.getPath())).openConnection();
+            HttpURLConnection httpURLConnection = (HttpURLConnection)(new URL(data.getFilePath())).openConnection();
             httpURLConnection.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
             httpURLConnection.setUseCaches(false);
             httpURLConnection.setConnectTimeout(1000);
@@ -59,7 +60,7 @@ public class UpdateService {
             InputStream inputStream = httpURLConnection.getInputStream();
             Throwable throwable1 = null;
             try {
-                File f = new File("modules",data.getPath().substring(data.getPath().lastIndexOf("/")+1));
+                File f = new File("modules",data.getFileName());
                 Files.copy(inputStream, f.toPath(), StandardCopyOption.REPLACE_EXISTING);
             } catch (Throwable throwable) {
                 throwable1 = throwable;
@@ -88,7 +89,7 @@ public class UpdateService {
 
     }
     private UpdateData getUpdateData(VersionType branch) throws IOException {
-        String url = "https://api.madfix.me/version.php?type=modul&new&branch="+branch.getType();
+        String url = String.format("https://api.madfix.me/v1/download.php?BRANCH=%s&ENVIRONMENT=CLOUDNET",branch.getType());
         URL adress;
         try {
             adress = new URL( url);
@@ -124,7 +125,7 @@ public class UpdateService {
         return data;
     }
     public ArrayList<UpdateData> getUpdates(VersionType branch) throws Exception {
-        String url = "https://api.madfix.me/version.php?type=modul&branch="+branch.getType();
+        String url = String.format("https://api.madfix.me/v1/download.php?BRANCH=%s&ENVIRONMENT=CLOUDNET",branch.getType());
         URL adress = new URL( url);
         HttpURLConnection connection = (HttpURLConnection) adress.openConnection();
         connection.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
@@ -142,9 +143,9 @@ public class UpdateService {
             return null;
         }
         String result = new BufferedReader(new InputStreamReader(connection.getInputStream())).readLine();
-        JsonObject jsonObject = new JsonParser().parse(result).getAsJsonObject();
+        JsonElement jsonObject = new JsonParser().parse(result);
         ArrayList<UpdateData> datas = new ArrayList<>();
-        jsonObject.get("versions").getAsJsonArray().forEach(t->datas.add(JsonUtil.getGson().fromJson(t,UpdateData.class)));
+        jsonObject.getAsJsonObject().get("versions").getAsJsonArray().forEach(t->datas.add(JsonUtil.getGson().fromJson(t.getAsJsonObject(),UpdateData.class)));
         connection.disconnect();
         return datas;
     }
